refactor: AcademicEventConverter Stream toList 변경